HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeEnumFieldApply/Expected.uv
//! Expected diagnostic metadata for the FfiSafeEnumFieldApply rejected-source specimen.

expectedDiagnostic("E-TYP-2627", "rule.23.FfiSafe-Enum-Field-Apply-Err")
